syntax = "proto3";

package dataprocessing;

service DataProcessingService {
  rpc ProcessUserData(DataProcessingRequest) returns (DataProcessingResponse);
}

message UserData {
  string name = 1;
  string email = 2;
  int32 age = 3;
  string timestamp = 4;
}

message DataProcessingRequest {
  UserData userData = 1;
  string sourceApp = 2;
  string requestId = 3;
}

message ProcessedData {
  string id = 1;
  string name = 2;
  string email = 3;
  int32 age = 4;
  string processedBy = 5;
  string enrichedInfo = 6;
  string timestamp = 7;
  string processingTimestamp = 8;
}

message DataProcessingResponse {
  bool success = 1;
  ProcessedData processedData = 2;
  string message = 3;
} 